fix(roles): Role Section text center align

--- a/src/modules/Dashboard/modules/landing/components/RolesSection.module.css
+++ b/src/modules/Dashboard/modules/landing/components/RolesSection.module.css
@@ -95,5 +95,5 @@
 .roleDesc {
   font-size: 0.85rem;
   font-weight: 400;
-  text-align: justify;
+  text-align: center;
 }
